fix gap

--- a/src/blocks/row-maxi/editor.scss
+++ b/src/blocks/row-maxi/editor.scss
@@ -5,7 +5,6 @@
 	padding: 0;
 	z-index: 2;
 	flex-wrap: wrap;
-	row-gap: 20px;
 
 	&__template {
 		display: flex;
