--- a/src/blocks/row-maxi/style.scss
+++ b/src/blocks/row-maxi/style.scss
@@ -3,6 +3,7 @@ body.maxi-blocks--active .maxi-row-block {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
+	row-gap: 20px;
 
 	&:focus {
 		&:after {
